--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<header>
+<head>
   <nav>
     <ul>
       <!-- Navigation is the same on all three html files -->
@@ -16,10 +16,12 @@
       <li><a href="script.html">Bee Movie Script</a></li>
     </ul>
   </nav>
-</header>
+</head>
 
+<header id="header1">
 <h1>Home Page</h1>
   <p>Hello!!! Welcome to my personal website. I dont really know what exactly I should put here so I think I'll just say a bit about myself.</p><br>
+</header>
 
 <h2>Overview</h2>
   <p>My name is Toney. I am a sophemore at the Illinois Insitute of Technology majoring in Applied Cybersecurity and IT. I am involved in a few student orgs including Navy ROTC, D3 Track & Field, and being a member of the Alpha Epsilon chapter of the Phi Kappa Sigma International Fraternity</p><br>
