--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
   </nav>
 </head>
 
-<header id="header1">
-<h1>Home Page</h1>
-  <p>Hello!!! Welcome to my personal website. I dont really know what exactly I should put here so I think I'll just say a bit about myself.</p><br>
-</header>
+<div class="box-h">
+  <header id="header1">
+    <h1>Home Page</h1>
+    <p>Hello!!! Welcome to my personal website. I dont really know what exactly I should put here so I think I'll just say a bit about myself.</p><br>
+  </header>
+</div>
 
 <h2>Overview</h2>
   <p>My name is Toney. I am a sophemore at the Illinois Insitute of Technology majoring in Applied Cybersecurity and IT. I am involved in a few student orgs including Navy ROTC, D3 Track & Field, and being a member of the Alpha Epsilon chapter of the Phi Kappa Sigma International Fraternity</p><br>
