messed with css and removed header from the box to try to get the box to work

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 </head>
 
 <div class="box-h">
-  <header id="header1">
+  <h1>About Me</h1>
+</div>
+
+<header id="header1">
     <h1>Home Page</h1>
     <p>Hello!!! Welcome to my personal website. I dont really know what exactly I should put here so I think I'll just say a bit about myself.</p><br>
-  </header>
-</div>
+</header>
 
 <h2>Overview</h2>
   <p>My name is Toney. I am a sophemore at the Illinois Insitute of Technology majoring in Applied Cybersecurity and IT. I am involved in a few student orgs including Navy ROTC, D3 Track & Field, and being a member of the Alpha Epsilon chapter of the Phi Kappa Sigma International Fraternity</p><br>
