--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>Home Page</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 <body>
   <div id="page-wrapper1">
     <head>
-      <nav>
+      <nav id="nav-horizontal">
         <ul>
           <!-- Navigation is the same on all three html files -->
           <li><a href="index.html">Homepage</a></li>
@@ -58,7 +59,7 @@
       <footer>
         <p>Awesome Website</p>
       </footer>
-      
+
     </div>
 </body>
 </html>
