--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,13 @@
   <title>Home Page</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/resume.css">
 </head>
 
 <body>
   <div id="page-wrapper3">
     <header>
-      <nav>
+      <nav id="nav-horizontal">
         <ul>
           <!-- Navigation is the same on all three html files -->
           <li><a href="index.html">Homepage</a></li>
@@ -73,7 +74,7 @@
       <h1>Goals</h1>
         <p>My goals for the future are to graduate college and commision into the Information Warfare community in the United States Navy.</p>
     </section>
-    
+
       <footer>
         <p>Awesome Website</p>
       </footer>
