--- a/script.html
+++ b/script.html
@@ -6,12 +6,13 @@
   <title>Home Page</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/script.css">
 </head>
 
 <body id ="body-s">
   <div id="page-wrapper2">
     <header>
-      <nav>
+      <nav id="nav-horizontal">
         <ul>
           <!-- Navigation is the same on all three html files -->
           <li><a href="index.html">Homepage</a></li>
