--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Home Page</title>
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="proj2/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="proj2/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="proj2/css/index.css">
 </head>
 
 <body>
