changed CSS to css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Home Page</title>
-  <link rel="stylesheet" type="text/css" href="proj2/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="proj2/css/styles.css">
-  <link rel="stylesheet" type="text/css" href="proj2/css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 <body>
@@ -43,16 +43,16 @@
     <h2>Hobbies in the past</h2>
       <ul>
         <li>Video Games:<p>In the past I have been really into playing video games. Unfortunatly I dont know where I'd even start back in those anymore.</p>
-        <img src="Media/xbox.jpg" alt="picture of an xbox" style="width:300px;height:200px;">
+        <img src="media/xbox.jpg" alt="picture of an xbox" style="width:300px;height:200px;">
         </li>
         <li>Reading:<br><p>I was a big reader as well, now I usually just read assigned chapters.</p>
         <iframe width="300" height="200" src="https://www.youtube.com/embed/0drq5qc1_Us" title="Opened Book Flipping Through Pages Static Shot Free Stock Video" allowfullscreen></iframe>"
         </li>
         <li>Biking:<p>I used to ride bikes, but I didnt bring mine with me to Chicago.</p>
-        <img src="Media/bike.jpg" alt="picture of an bike" style="width:300px;height:200px;">
+        <img src="media/bike.jpg" alt="picture of an bike" style="width:300px;height:200px;">
         </li>
         <li>Cooking:<p>Cooking is still something I enjoy, but I dont really have the time anymore.</p>
-        <img src="Media/food.jpg" alt="picture of food being cooked" style="width:300px;height:200px;">
+        <img src="media/food.jpg" alt="picture of food being cooked" style="width:300px;height:200px;">
         </li>
       </ul>
 
