--- a/script.html
+++ b/script.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Home Page</title>
-  <link rel="stylesheet" type="text/css" href="proj2/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="proj2/css/styles.css">
-  <link rel="stylesheet" type="text/css" href="proj2/css/script.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/script.css">
 </head>
 
 <body id ="body-s">
@@ -40,7 +40,7 @@
       <p>Hang on a second.</p>
       <p>Hello?</p>
       <section id="section9">
-        <img src="Media/bee1.png" alt="picture of an bee" style="width:300px;height:200px;">
+        <img src="media/bee1.png" alt="picture of an bee" style="width:300px;height:200px;">
       </section>
       <p>Barry?</p>
       <p>Adam?</p>
@@ -53,7 +53,7 @@
       <p>Here's the graduate.</p>
       <p>We're very proud of you, son.</p>
       <section id="section10">
-        <img src="Media/bee2.png" alt="picture of an bee" style="width:300px;height:200px;">
+        <img src="media/bee2.png" alt="picture of an bee" style="width:300px;height:200px;">
       </section>
       <p>A perfect report card, all B's.</p>
       <p>Very proud.</p>
@@ -67,7 +67,7 @@
       <p>Hey, Barry.</p>
       <p>Is that fuzz gel?</p>
       <section id="section11">
-        <img src="Media/bee3.png" alt="picture of an bee" style="width:300px;height:200px;">
+        <img src="media/bee3.png" alt="picture of an bee" style="width:300px;height:200px;">
       </section>
 
     <footer>
